# teste_bemol

./: README.md  docker-compose.yaml  dockerfile  pyproject.toml
