[tool.poetry]
name = "bemol-channels"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "bemol_channels"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
sqlalchemy = "^1.4.46"
alembic = "^1.9.2"
pylint = "^2.15.10"
fastapi-login = "^1.8.3"
mysql-connector-python = "^8.0.32"
python-jose = "^3.3.0"
fastapi-utils = "^0.2.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
